# happy_guy

./: .gitignore  README.md  pyproject.toml
html_templates/: birthday.html  farewell.html  work_anniversary.html
src/crew/: __init__.py  crew.py  main.py  utils.py
src/crew/config/: agents.yaml  tasks.yaml
